# Fischi-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  LICENSE  Makefile  README.md  premake5.lua
dependencies/premake/: desktop.ini
scripts/: wsl  wsl.c
src/Fischi-Editor/: Makefile  premake5.lua
src/Fischi-Engine/: Makefile  premake5.lua
src/Fischi-Engine/Core/: Application.cpp  Application.h  Core.h  Event.h  EventQueue.h  KeyCodes.h  Log.cpp  Log.h  Window.cpp  Window.h
src/Fischi-Engine/Core/Event/: Event.h  EventDefs.h  EventQueue.cpp  EventQueue.h
src/Fischi-Engine/Core/Memory/: LinearBlockAllocator.cpp  LinearBlockAllocator.h  Memory.cpp  Memory.h
src/Fischi-Engine/Core/Time/: Timer.cpp  Timer.h
src/Fischi-Engine/Platform/: Platform.h  RenderPlatform.cpp  RenderPlatform.h
src/Fischi-Engine/Platform/Linux/: LinuxInput.cpp  LinuxInput.h  LinuxPlatform.cpp  LinuxPlatform.h  WaylandWindow.cpp  WaylandWindow.h  X11Window.cpp  X11Window.h
src/Fischi-Engine/Platform/Vulkan/: Vulkan.cpp  VulkanRenderPlatform.cpp  VulkanRenderPlatform.h
src/Fischi-Engine/Platform/Windows/: WindowInupt.cpp  WindowWindow.cpp  WindowWindow.h  WindowsInupt.cpp  WindowsInupt.h  WindowsPlatform.cpp  WindowsPlatform.h  WindowsWindow.cpp
src/Fischi-Engine/Projects/: Project.cpp  Project.h
src/Fischi-Engine/Utils/: String.h
src/Sandbox/: Makefile  premake5.lua  test.c  test.cpp
src/engine/: test.c
src/engine/core/: app.cppm  core.cppm  di.cppm  events.cppm  logger.cppm  math.cppm  service.cppm
src/sandbox/: main.cpp  sandbox.c
